gitops/infra/ingress/istio-gateway/base/http-gatway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gateway
spec:
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: gateway-service-config
  gatewayClassName: istio
  listeners:
  - name: http
    hostname: "*.konst.fish"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: default
    hostname: "*.svc.cluster.local"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: https
    hostname: "*.konst.fish"
    port: 443
    protocol: HTTPS
    allowedRoutes:
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
      - name: wildcard-external-tls
        kind: Secret
