gitops/infra/ingress/istio-gateway/base/redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: global-redirect
  namespace: istio-ingress
spec:
  parentRefs:
  - name: http-gateway
    sectionName: http
  hostnames:
  - "konst.fish"
  - "*.konst.fish"
  - "*.net.konst.fish"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: global-redirect-netbird
  namespace: istio-ingress
spec:
  parentRefs:
  - name: http-gateway-netbird
    sectionName: http
  hostnames:
  - "konst.fish"
  - "*.konst.fish"
  - "*.net.konst.fish"
  - "*.barracuda.net.konst.fish"
  - "*.tetra.net.konst.fish"
  - "*.tuna.net.konst.fish"
  - "*.sardine.net.konst.fish"
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
